base/network/allow-frontend-backend-def.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backend-policy
spec:
  endpointSelector:
    matchLabels:
      app: hotel-booking-api
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: hotel-booking-ui
      toPorts:
        - ports:
            - port: "5150"
